First steps to create GUI

--- a/usermanagement2/src/main/resources/settings.properties
+++ b/usermanagement2/src/main/resources/settings.properties
@@ -4,3 +4,4 @@ connection.user=sa
 connection.password=
 
 dao.ua.nure.kn.bondarchuk.usermanagement2.db.UserDao=ua.nure.kn.bondarchuk.usermanagement2.db.HsqldbUserDao
+dao.factory=ua.nure.kn.bondarchuk.usermanagement2.db.DaoFactoryImpl
