--- a/usermanagement2/build.xml
+++ b/usermanagement2/build.xml
@@ -1,9 +1,19 @@
 <project name="usernamagement2" basedir="." default="test">
 
 	<property name="main-java-dir" value="${basedir}/src/main/java"></property>
+	<property name="main-webapp-dir" value="${basedir}/src/main/webapp"></property>
+	<property name="main-webapp-webinf-dir" value="${main-webapp-dir}/WEB-INF"></property>
 	<property name="build-dir" value="${basedir}/target"></property>
 	<property name="test-java-dir" value="${basedir}/src/test/java"></property>
 	<property name="classes-dir" value="${build-dir}/classes"/>
+	<property name="main-resources-dir" value="${basedir}/src/main/resources"></property>
+	
+	<property name="war-name" value="users"></property>
+	<property name="war-dir" value="${build-dir}/${war-name}"></property>
+	<property name="war-jsp-dir" value="${war-dir}"></property>
+	<property name="war-webinf-dir" value="${war-dir}/WEB-INF"></property>
+	<property name="war-lib-dir" value="${war-webinf-dir}/lib"></property>
+	<property name="war-classes-dir" value="${war-webinf-dir}/classes"></property>
 	
 	<target name="clean">
 		<delete dir="${build-dir}" failonerror="no"/>
@@ -17,6 +27,44 @@
 	<target name="compile" depends="init">
 		<javac srcdir="${main-java-dir}" destdir="${build-dir}">
 		</javac>
+	</target>
+	
+	<target name="war.exploded" depends="compile">
+		<copy todir="${war-jsp-dir}">
+			<fileset dir="${main-webapp-dir}"></fileset>
+		</copy>
+		
+		<copy todir="${war-lib-dir}">
+			<fileset dir="${lib-dir}">
+					<include name="hsqldb*.jar"/>
+					<include name="jstl*.jar"/>
+					<include name="standard*.jar"/>
+			</fileset>
+		</copy>
+		<copy todir="${war-classes-dir}">
+			<fileset dir="${main-resources-dir}"></fileset>			
+		
+		</copy>
+		
+		<copy todir="${war-classes-dir}">
+			<fileset dir="${classes-dir}"/>
+			
+		
+		</copy>
+	</target>
+	
+	<target name="war" depends="war.exploded">
+		<delete file="${build-dir}/${war-name}.war" failonerror="no"/>
+		<war destfile="${build-dir}/${war-name}.war" webxml="${main-webapp-webinf-dir}/web.xml">
+		            <fileset dir="${war-jsp-dir}">
+		                <exclude name="WEB-INF/*.*"/>
+		            </fileset>
+		            <classes dir="${war-classes-dir}"/>
+		            <lib dir="${war-lib-dir}"/>
+		            <webinf dir="${war-webinf-dir}">
+		                <exclude name="web.xml"/>
+		            </webinf>
+		        </war>
 	</target>
 	
 	<target name="test-compile" depends="compile">
